fix jumping transition

--- a/css/Stylesheet im schatten des irrlichts.css
+++ b/css/Stylesheet im schatten des irrlichts.css
@@ -452,8 +452,10 @@ img {
     -moz-transition: opacity 2s ease-in-out;
     -ms-transition: opacity 2s ease-in-out;
     -o-transition: opacity 2s ease-in-out;
-    transition: opacity 2s ease-in-out;
-  transition: 2s;
+    transition:
+      opacity 2s ease-in-out,
+      padding 2s ease-in-out,
+      height 0.4s ease-in-out;
 }
 
 .toggle label:hover {
